--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "mongoose": "^7.4.2",
     "mongoose-encryption": "^2.1.2",
     "mongoose-findorcreate": "^4.0.0",
+    "netlify-lambda": "^2.0.16",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "serverless-http": "^3.2.0"
   },
   "name": "secrets---starting-code",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "build": "webpack --mode production"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
