--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "build": "webpack --mode production"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
