--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+  "name": "secrets---starting-code",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
+
+
+{
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
