--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
-},
-{
+  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -29,7 +27,4 @@
     "passport-local-mongoose": "^8.0.0",
     "serverless-http": "^3.2.0"
   }
-  "author": "",
-  "license": "ISC",
-  "description": ""
 }
